<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroPety">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_cadastropet_fragment"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_cadastropet_fragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/relativelayout_cadastropet_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textinputlayout_cadastropet_nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_nome">

                    <EditText
                        android:id="@+id/ed_cadastropet_nome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="top|left"
                        android:hint="@string/txt_nome"
                        android:inputType="textMultiLine"
                        android:lines="2" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/imgFalar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignTop="@+id/textinputlayout_cadastropet_nome"
                    android:layout_alignRight="@+id/textinputlayout_cadastropet_nome"
                    android:layout_alignBottom="@+id/textinputlayout_cadastropet_nome"
                    android:background="@drawable/fundo_icone_busca"
                    android:onClick="vozTextoNome"
                    android:padding="6dp"
                    android:src="@drawable/ic_mic"
                    android:tint="@color/colorPrimary"
                    app:layout_constraintStart_toEndOf="@+id/textinputlayout_cadastropet_nome" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativelayout_cadastropet_tipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"

                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativelayout_cadastropet_nome">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textinputlayout_cadastropet_tipo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/ed_cadastropet_tipo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="top|left"
                        android:hint="@string/txt_tipo_pety"
                        android:inputType="textMultiLine"
                        android:lines="2" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/imgFalar_cadastropet_tipo"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignTop="@+id/textinputlayout_cadastropet_tipo"
                    android:layout_alignRight="@+id/textinputlayout_cadastropet_tipo"
                    android:layout_alignBottom="@+id/textinputlayout_cadastropet_tipo"
                    android:background="@drawable/fundo_icone_busca"
                    android:onClick="vozTextoTipo"
                    android:padding="6dp"
                    android:src="@drawable/ic_mic"
                    android:tint="@color/colorPrimary"
                    app:layout_constraintStart_toEndOf="@+id/textinputlayout_cadastropet_tipo" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativelayout_cadastropet_porte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"

                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativelayout_cadastropet_tipo">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textinputlayout_cadastropet_porte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/ed_cadastropet_porte"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="top|left"
                        android:hint="@string/txt_porte"
                        android:inputType="textMultiLine"
                        android:lines="2" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/imgFalar_cadastropet_porte"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignTop="@+id/textinputlayout_cadastropet_porte"
                    android:layout_alignRight="@+id/textinputlayout_cadastropet_porte"
                    android:layout_alignBottom="@+id/textinputlayout_cadastropet_porte"
                    android:background="@drawable/fundo_icone_busca"
                    android:onClick="vozTextoPorte"
                    android:padding="6dp"
                    android:src="@drawable/ic_mic"
                    android:tint="@color/colorPrimary"
                    app:layout_constraintStart_toEndOf="@+id/textinputlayout_cadastropet_porte" />

            </RelativeLayout>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="101dp"
                android:layout_height="98dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/ic_add_a_photo"
                android:onClick="chamarCamera1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativelayout_cadastropet_porte" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>